devel/ultimatepp/files/logs
----- CtrlCore ( GUI GCC SHARED BLITZ POSIX BSD OSX ) (32 / 38)
CocoDraw.mm
CocoDrawOp.mm
CocoImage.mm
CocoApp.mm
CocoWin.mm
'
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoApp.mm:321: confused by earlier errors, bailing out
CocoProc.mm
CocoClip.mm
during GIMPLE pass: eh
In file included from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Core/Core.h:381,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/Draw.h:6,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/RichText/RichText.h:4,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CtrlCore.h:4,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoMM.h:131,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoWin.mm:1:
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Core/JSON.h: In function 'void Upp::JsonizeBySerialize(JsonIO&, T&) [with T = Image]':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Core/JSON.h:451:6: internal compiler error: in objc_eh_runtime_type, at objc/objc-next-runtime-abi-01.cc:2798
  451 | void JsonizeBySerialize(JsonIO& jio, T& x)
      |      ^~~~~~~~~~~~~~~~~~
Please submit a full bug report, with preprocessed source (by using -freport-bug).
See <https://github.com/macos-powerpc/powerpc-ports/issues/new> for instructions.
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm: In static member function 'static bool Upp::MMImp::MouseEvent(CocoView*, NSEvent*, int, double)':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:51: error: expected ';' before 'in'
  142 |                                 for(NSNumber *num in [NSWindow windowNumbersWithOptions:0]) { // All app windows
      |                                                   ^~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:51: error: 'in' was not declared in this scope; did you mean 'min'?
  142 |                                 for(NSNumber *num in [NSWindow windowNumbersWithOptions:0]) { // All app windows
      |                                                   ^~
      |                                                   min
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:64: error: expected primary-expression before 'windowNumbersWithOptions'
  142 |                                 for(NSNumber *num in [NSWindow windowNumbersWithOptions:0]) { // All app windows
      |                                                                ^~~~~~~~~~~~~~~~~~~~~~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:64: error: expected ']' before 'windowNumbersWithOptions'
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:64: error: expected ';' before 'windowNumbersWithOptions'
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:64: error: 'windowNumbersWithOptions' was not declared in this scope; did you mean 'NSWindowNumberListOptions'?
  142 |                                 for(NSNumber *num in [NSWindow windowNumbersWithOptions:0]) { // All app windows
      |                                                                ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                                                NSWindowNumberListOptions
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:88: error: expected ')' before ':' token
  142 |                                 for(NSNumber *num in [NSWindow windowNumbersWithOptions:0]) { // All app windows
      |                                                                                        ^
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:36: note: to match this '('
  142 |                                 for(NSNumber *num in [NSWindow windowNumbersWithOptions:0]) { // All app windows
      |                                    ^
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:142:88: error: expected primary-expression before ':' token
  142 |                                 for(NSNumber *num in [NSWindow windowNumbersWithOptions:0]) { // All app windows
      |                                                                                        ^
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm: In function '-[CocoView updateTrackingAreas]':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:527:30: error: expected ';' before 'in'
  527 |         for(NSTrackingArea *t in [self trackingAreas])
      |                              ^~~
      |                              ;
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:527:31: error: 'in' was not declared in this scope; did you mean 'yn'?
  527 |         for(NSTrackingArea *t in [self trackingAreas])
      |                               ^~
      |                               yn
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:527:39: error: expected ']' before 'trackingAreas'
  527 |         for(NSTrackingArea *t in [self trackingAreas])
      |                                       ^~~~~~~~~~~~~~
      |                                       ]
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:527:39: error: expected ';' before 'trackingAreas'
  527 |         for(NSTrackingArea *t in [self trackingAreas])
      |                                       ^~~~~~~~~~~~~~
      |                                       ;
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:527:40: error: 'trackingAreas' was not declared in this scope; did you mean 'NSTrackingArea'?
  527 |         for(NSTrackingArea *t in [self trackingAreas])
      |                                        ^~~~~~~~~~~~~
      |                                        NSTrackingArea
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:527:53: error: expected ')' before ']' token
  527 |         for(NSTrackingArea *t in [self trackingAreas])
      |            ~                                        ^
      |                                                     )
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:527:53: error: expected primary-expression before ']' token
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm: At global scope:
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:609:1: warning: incomplete implementation of class 'CocoView'
  609 | @end
      | ^~~~
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:609:1: warning: method definition for '-doCommandBySelector:' not found
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoProc.mm:609:1: warning: class 'CocoView' does not fully implement the 'NSTextInputClient' protocol
during GIMPLE pass: eh
In file included from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Core/Core.h:381,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Draw/Draw.h:6,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/RichText/RichText.h:4,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CtrlCore.h:4,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoMM.h:131,
                 from /opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/CtrlCore/CocoClip.mm:1:
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Core/JSON.h: In function 'void Upp::JsonizeBySerialize(JsonIO&, T&) [with T = Image]':
/opt/local/var/macports/build/ultimatepp-28bdc723/work/ultimatepp-2026.1/uppsrc/Core/JSON.h:451:6: internal compiler error: in objc_eh_runtime_type, at objc/objc-next-runtime-abi-01.cc:2798
  451 | void JsonizeBySerialize(JsonIO& jio, T& x)
      |      ^~~~~~~~~~~~~~~~~~
Please submit a full bug report, with preprocessed source (by using -freport-bug).
See <https://github.com/macos-powerpc/powerpc-ports/issues/new> for instructions.
CtrlCore: 7 file(s) built in (0:45.29), 6471 msecs / file

There were errors. (0:48.50)
Command failed: CXX=/opt/local/bin/g++-mp-14 ./umk ./uppsrc ide GCC -brs ./theide
Exit code: 1
Error: Failed to build ultimatepp: command execution failed
